Aggregate report: category section graphics
Former-commit-id: c2f4e511cd919bc18a813f06148575894d9ee599

--- a/portal/src/main/resources/ApplicationResources-UNEEN2019.properties
+++ b/portal/src/main/resources/ApplicationResources-UNEEN2019.properties
@@ -2401,7 +2401,9 @@ observatory.graphic.accessibility.level.allocation.by.page.title        = Distri
 observatory.graphic.accessibility.level.allocation.name                 = DistribucionNivelAccesibilidadGlobal
 observatory.graphic.compilance.level.allocation.name					= DistribucionNivelCumplimientoGlobal
 observatory.graphic.accessibility.level.allocation.segment.name         = DistribucionNivelAccesibilidadS{0}
+observatory.graphic.accessibility.level.compilance.segment.name         = DistribucionNivelCumplimientoS{0}
 observatory.graphic.accessibility.level.allocation.segment.title        = Distribuci\u00F3n del Nivel de Accesibilidad. {0}
+observatory.graphic.accessibility.level.allocation.segment.title	= Distribuci\u00F3n del Nivel de Cumplimiento. {0}
 observatory.graphic.accessibility.level.allocation.title                = Distribuci\u00F3n del Nivel de accesibilidad global
 observatory.graphic.aspect.mid.name                                     = ComparacionMediasAspectos
 observatory.graphic.aspect.mid.title                                    = Comparaci\u00F3n de Medias orientadas a Aspectos
@@ -2431,6 +2433,20 @@ observatory.graphic.modality.by.verification.level.1.title              = Compar
 observatory.graphic.modality.by.verification.level.2.category.title     = Comparaci\u00F3n de Modalidad por Verificaci\u00F3n: {0}. AA
 observatory.graphic.modality.by.verification.level.2.name               = ComparacionModalidadVerificacionII
 observatory.graphic.modality.by.verification.level.2.title              = Comparaci\u00F3n de Modalidad por Verificaci\u00F3n. AA
+
+
+
+observatory.graphic.compilance.by.verification.level.1.category.title     = Comparaci\u00F3n de Cumplimiento por Verificaci\u00F3n: {0}. A
+observatory.graphic.compilance.by.verification.level.1.name               = ComparacionCumplimientoVerificacionI
+observatory.graphic.compilance.by.verification.level.1.title              = Comparaci\u00F3n de Cumplimiento por Verificaci\u00F3n. A
+observatory.graphic.compilance.by.verification.level.2.category.title     = Comparaci\u00F3n de Cumplimiento por Verificaci\u00F3n: {0}. AA
+observatory.graphic.compilance.by.verification.level.2.name               = ComparacionCumplimientoVerificacionII
+observatory.graphic.compilance.by.verification.level.2.title              = Comparaci\u00F3n de Cumplimiento por Verificaci\u00F3n. AA
+
+
+
+
+
 observatory.graphic.modality.green                                      = Modalidad pasa
 observatory.graphic.modality.red                                        = Modalidad falla
 observatory.graphic.mult.row                                            = Porcentaje P\u00E1ginas
