Editing tags in table available
Former-commit-id: 139016f19ddcb7e0e25607b29af5526d553a1b07

--- a/portal/src/main/resources/ApplicationResources-Accesibilidad.properties
+++ b/portal/src/main/resources/ApplicationResources-Accesibilidad.properties
@@ -1400,6 +1400,7 @@ nueva.semilla.observatorio.activa        = Activa
 nueva.semilla.observatorio.categoria     = Segmento
 nueva.semilla.observatorio.complejidad   = Complejidad
 nueva.semilla.observatorio.dependencia   = Depende de
+nueva.semilla.observatorio.etiqueta		 = Etiqueta
 nueva.semilla.observatorio.in.directory  = Seguir solo enlaces del directorio:
 nueva.semilla.observatorio.nombre        = Nombre Semilla
 nueva.semilla.observatorio.url           = URL
