--- a/portal/src/main/resources/ApplicationResources.properties
+++ b/portal/src/main/resources/ApplicationResources.properties
@@ -1003,6 +1003,7 @@ nueva.semilla.observatorio.url = URL
 nueva.semilla.observatorio.complejidad = Complejidad
 nueva.semilla.observatorio.categoria = Segmento
 nueva.semilla.observatorio.dependencia = Depende de
+nueva.semilla.observatorio.etiqueta		 = Etiqueta
 nueva.semilla.observatorio.acronimo = Acr\u00F3nimo
 nueva.semilla.observatorio.in.directory = Seguir solo enlaces del directorio:
 
