Observatory status console
Former-commit-id: a69a60b38e1091474f4e1f2232e64af76a50f11c

--- a/portal/src/main/resources/ApplicationResources.properties
+++ b/portal/src/main/resources/ApplicationResources.properties
@@ -1098,6 +1098,7 @@ migas.eliminar.termino.categoria                         = Eliminar T\u00E9rmino
 migas.eliminar.usuario                                   = Eliminar Usuario
 migas.error                                              = Error
 migas.establecer.valores.cartucho                        = Establecer Valores Cartucho
+migas.estado.observatorio                                = Estado del observatorio
 migas.etiquetas.observatorio                             = Etiquetas
 migas.exportar                                           = Exportar resultados
 migas.graficas                                           = Gr\u00E1ficas
