Basic Service consoles
Former-commit-id: a068d3a09658d8a3e836fb413a93c22d472327e4

--- a/portal/src/main/resources/ApplicationResources.properties
+++ b/portal/src/main/resources/ApplicationResources.properties
@@ -2819,10 +2819,13 @@ semillas.observatorio.title = Asociar Semillas a Observatorio
 send.numHilos    = N\u00FAmero de hilos
 send.numRastreos = N\u00FAmero de rastreos
 
-servicio.diagnostico.fecha.fin    = Fecha fin (incluida)
-servicio.diagnostico.fecha.inicio = Fecha inicio (incluida)
-servicio.diagnostico.fecha.legend = Rango de fechas de exportaci\u00F3n
-servicio.diagnostico.title        = Servicio de Diagn\u00F3stico
+servicio.diagnostico.fecha.fin             = Fecha fin (incluida)
+servicio.diagnostico.fecha.inicio          = Fecha inicio (incluida)
+servicio.diagnostico.fecha.legend          = Rango de fechas de exportaci\u00F3n
+servicio.diagnostico.title                 = Servicio de Diagn\u00F3stico
+servicio.diagnostirco.estadisticas.email   = Email
+servicio.diagnostirco.estadisticas.url     = URL
+servicio.diagnostirco.estadisticas.usuario = Usuario
 
 sesion.activa          = Se ha producido otra sesi\u00F3n con su usuario.
 sesion.duplicadaconfig = Se ha producido otra sesi\u00F3n con su usuario configurador de su cartucho.
