Basic Service consoles
Former-commit-id: 7168ccd262b1bd1bea5c1e1965f9b1636bd8371b

--- a/portal/src/main/resources/ApplicationResources.properties
+++ b/portal/src/main/resources/ApplicationResources.properties
@@ -2819,13 +2819,23 @@ semillas.observatorio.title = Asociar Semillas a Observatorio
 send.numHilos    = N\u00FAmero de hilos
 send.numRastreos = N\u00FAmero de rastreos
 
-servicio.diagnostico.fecha.fin             = Fecha fin (incluida)
-servicio.diagnostico.fecha.inicio          = Fecha inicio (incluida)
-servicio.diagnostico.fecha.legend          = Rango de fechas de exportaci\u00F3n
-servicio.diagnostico.title                 = Servicio de Diagn\u00F3stico
-servicio.diagnostirco.estadisticas.email   = Email
-servicio.diagnostirco.estadisticas.url     = URL
-servicio.diagnostirco.estadisticas.usuario = Usuario
+servicio.diagnostico.fecha.fin                      = Fecha fin (incluida)
+servicio.diagnostico.fecha.inicio                   = Fecha inicio (incluida)
+servicio.diagnostico.fecha.legend                   = Rango de fechas de exportaci\u00F3n
+servicio.diagnostico.title                          = Servicio de Diagn\u00F3stico
+servicio.diagnostirco.estadisticas.amplitud         = Amplitud
+servicio.diagnostirco.estadisticas.directorio       = En directorio
+servicio.diagnostirco.estadisticas.email            = Email
+servicio.diagnostirco.estadisticas.encurso.info     = Se muestran los an\u00E1lisis en estado "Lanzado" del d\u00EDa actual
+servicio.diagnostirco.estadisticas.encurso.title    = An\u00E1lisis en curso
+servicio.diagnostirco.estadisticas.estado           = Estado
+servicio.diagnostirco.estadisticas.informe          = Informe
+servicio.diagnostirco.estadisticas.profundidad      = Profundidad
+servicio.diagnostirco.estadisticas.resultados.info  = El tipo de portal se indicar\u00E1 si la URL analizada en el servicio de diagn\u00F3stico coincide con alguna de las semillas almacenadas en base de datos. En caso contrario, se indicar\u00E1 como "Otros"
+servicio.diagnostirco.estadisticas.resultados.title = Resultados de la b\u00FAsqueda
+servicio.diagnostirco.estadisticas.tipo             = Tipo
+servicio.diagnostirco.estadisticas.url              = URL
+servicio.diagnostirco.estadisticas.usuario          = Usuario
 
 sesion.activa          = Se ha producido otra sesi\u00F3n con su usuario.
 sesion.duplicadaconfig = Se ha producido otra sesi\u00F3n con su usuario configurador de su cartucho.
