--- a/portal/src/main/resources/ApplicationResources.properties
+++ b/portal/src/main/resources/ApplicationResources.properties
@@ -700,7 +700,8 @@ mensaje.error.nombre.dependencia.duplicado = Nombre de dependencia ya existente
 mensaje.exito.dependencia.generada = Dependencia generada con \u00E9xito.
 mensaje.exito.dependencia.eliminada = Dependencia eliminada con \u00E9xito.
 mensaje.error.nombre.dependencia.obligatorio= El nombre de la dependencia es obligatorio
-
+mensaje.error.nombre.etiqueta.duplicado                    = Nombre de etiqueta ya existente
+mensaje.error.nombre.etiqueta.obligatorio                  = El nombre de la etiqueta es obligatorio
 gestion.complejidades.observatorio = Gesti\u00F3n de Complejidades del Observatorio
 gestion.complejidades.observatorio.titulo = Gesti\u00F3n de Complejidades del Observatorio
 gestion.etiquetas.observatorio.titulo = Gesti\u00F3n de Etiquetas del Observatorio
