--- a/portal/src/main/resources/ApplicationResources-2012-b.properties
+++ b/portal/src/main/resources/ApplicationResources-2012-b.properties
@@ -520,7 +520,7 @@ error.connecting.url                     = No se ha podido conectar a la URL esp
 error.cuenta.usuario                     = Cuenta Cliente
 error.dependendencia                     = Dependencia
 error.etiqueta                     = Etiqueta
-error.etiqueta                     = Clasificacion
+error.clasificacion                     = Clasificacion
 error.dom                                = \u00C1rboles DOM
 error.dom.confidence                     = Confianza \u00C1rboles DOM
 error.dom.weight                         = Peso \u00C1rboles DOM
@@ -898,6 +898,8 @@ mensaje.error.noCartuchos                                     = No puede crear u
 mensaje.error.noPermisos                                      = No tiene permisos sobre el Rastreo seleccionado.
 mensaje.error.nombre.dependencia.duplicado                    = Nombre de dependencia ya existente
 mensaje.error.nombre.dependencia.obligatorio                  = El nombre de la dependencia es obligatorio
+mensaje.error.nombre.etiqueta.duplicado                    = Nombre de etiqueta ya existente
+mensaje.error.nombre.etiqueta.obligatorio                  = El nombre de la etiqueta es obligatorio
 mensaje.error.nombre.complejidad.duplicado                    = Nombre de complejidad ya existente
 mensaje.error.nombre.complejidad.obligatorio                  = Todos los campos son obligatorios
 mensaje.error.campos.complejidad.numericos					  = Profundidad y amplitud deben ser números positivos
