--- a/portal/src/main/resources/ApplicationResources-UNEEN2019.properties
+++ b/portal/src/main/resources/ApplicationResources-UNEEN2019.properties
@@ -898,6 +898,8 @@ mensaje.error.noCartuchos                                     = No puede crear u
 mensaje.error.noPermisos                                      = No tiene permisos sobre el Rastreo seleccionado.
 mensaje.error.nombre.dependencia.duplicado                    = Nombre de dependencia ya existente
 mensaje.error.nombre.dependencia.obligatorio                  = El nombre de la dependencia es obligatorio
+mensaje.error.nombre.etiqueta.duplicado                    = Nombre de etiqueta ya existente
+mensaje.error.nombre.etiqueta.obligatorio                  = El nombre de la etiqueta es obligatorio
 mensaje.error.nombre.complejidad.duplicado                    = Nombre de complejidad ya existente
 mensaje.error.nombre.complejidad.obligatorio                  = Todos los campos son obligatorios
 mensaje.error.campos.complejidad.numericos					  = Profundidad y amplitud deben ser números positivos
