Individual Reporte new metodlogy
Former-commit-id: 4fde312f2f196b1c0ffab0208bdd037cbc9ebfde

--- a/portal/src/main/resources/ApplicationResources-UNEEN2019.properties
+++ b/portal/src/main/resources/ApplicationResources-UNEEN2019.properties
@@ -2631,9 +2631,9 @@ pdf.error.no.results                                    = No se ha podido genera
 pdf.intav.specific.problems.number                      = 20
 pdf.resultpage.media                                    = Puntuaci\u00F3n Media\nPrioridad {0}
 
-priority1.bs = Incidencias A
+priority1.bs = Incidencias.Nivel de adecuaci\u00F3n A
 
-priority2.bs = Incidencias AA
+priority2.bs = Incidencias.Nivel de adecuaci\u00F3n A
 
 problem.codice = C\u00F3digo Fuente:
 problem.column = Columna
