--- a/portal/src/main/resources/ApplicationResources.properties
+++ b/portal/src/main/resources/ApplicationResources.properties
@@ -658,6 +658,7 @@ gestion.complejidades.observatorio.titulo   = Gesti\u00F3n de Complejidades del 
 gestion.dependencias.observatorio           = Gesti\u00F3n de Dependencias del Observatorio
 gestion.dependencias.observatorio.titulo    = Gesti\u00F3n de Dependencias del Observatorio
 gestion.etiquetas.observatorio.titulo       = Gesti\u00F3n de Etiquetas del Observatorio
+gestion.plantillas.observatorio.titulo      = Gesti\u00F3n de Plantillas del Observatorio
 gestion.resultados.observatorio             = Resultados Observatorio
 gestion.resultados.observatorio.ejecuciones = Listado de Ejecuciones del Observatorio
 gestion.semillas                            = Gesti\u00F3n de Semillas
@@ -904,6 +905,8 @@ maximo.rastreos = El n\u00FAmero m\u00E1ximo de rastreos del cartucho ha sido su
 mensaje.certificado.ya.registrado                             = El certificado digital ya estaba registrado o la p\u00E1gina es accesible a trav\u00E9s del puerto HTTP normal.
 mensaje.error.campos.complejidad.numericos                    = Profundidad y amplitud deben ser n\u00FAmeros positivos
 mensaje.error.cartucho                                        = Se ha creado la cuenta cliente pero han fallado la creaci\u00F3n de los rastreos: {0}
+mensaje.error.documento.plantilla.formato                     = Formato no va\u013Aido. S\u00F3lo de admiten ficheros ODT
+mensaje.error.documento.plantilla.obligatorio                 = El documento de la plantilla es obligatorio
 mensaje.error.fichero.corrupto                                = El fichero al que est\u00E1 intentando acceder no est\u00E1 disponible o est\u00E1 corrupto. Por favor, proceda a subir un nuevo fichero.
 mensaje.error.generico                                        = No se ha podido realizar la acci\u00F3n seleccionada. Si el problema persiste, pongase en contacto con el administrador del sitio.
 mensaje.error.no.login                                        = No se ha identificado en el sistema, o su sesi\u00F3n ha caducado. Por favor, identif\u00EDquese en el formulario que se muestra a continuaci\u00F3n.
@@ -913,6 +916,8 @@ mensaje.error.nombre.complejidad.duplicado                    = Nombre de comple
 mensaje.error.nombre.complejidad.obligatorio                  = El nombre de la complejidad es obligatorio
 mensaje.error.nombre.dependencia.duplicado                    = Nombre de dependencia ya existente
 mensaje.error.nombre.dependencia.obligatorio                  = El nombre de la dependencia es obligatorio
+mensaje.error.nombre.plantilla.duplicado                      = Ya existe una plantilla con el mismo nombnre
+mensaje.error.nombre.plantilla.obligatorio                    = El nombre de la plantilla es obligatorio
 mensaje.error.nombre.semilla.duplicado                        = Nombre de Semilla ya existente.
 mensaje.error.numMax.hilos                                    = El n\u00FAmero m\u00E1ximo de hilos para este cartucho ha sido superado.
 mensaje.error.numMax.rastreo                                  = El n\u00FAmero m\u00E1ximo de rastreos para este cartucho ha sido superado.
@@ -951,6 +956,8 @@ mensaje.exito.observatorio.realizado.eliminado                = Ejecuci\u00F3n d
 mensaje.exito.observatorio.resultados.exportados              = Los resultados del Observatorio han sido exportados con \u00E9xito.
 mensaje.exito.pass.admin.cambiado                             = Password del usuario {0} cambiado.
 mensaje.exito.pass.usuario.cambiado                           = Password del Usuario cambiado.
+mensaje.exito.plantilla.eliminada                             = Plantilla eliminada correctamente
+mensaje.exito.plantilla.generada                              = Plantilla guardada correctamente
 mensaje.exito.rastreo.editado                                 = Rastreo Editado con exito. 
 mensaje.exito.rastreo.eliminado                               = Rastreo Eliminado con exito. 
 mensaje.exito.rastreo.insertado                               = Rastreo Insertado con exito. 
@@ -985,6 +992,7 @@ menu.config.observatory                       = Observatorio
 menu.config.observatory.seed                  = Semillas
 menu.config.observatory.seed.title            = Semillas asociadas al Observatorio
 menu.config.observatory.title                 = Observatorio
+menu.config.plantillas                        = Plantillas
 
 menuSemillas.gestion.semillas  = Gesti\u00F3n de Semillas
 menuSemillas.introducir        = Introducir Semillas
@@ -1177,6 +1185,7 @@ migas.nuevo.usuario                                      = Nuevo Usuario
 migas.nuevo.usuario.cliente                              = Nuevo Usuario Cliente
 migas.nuevo.usuario.observatorio                         = Nuevo Usuario Observatorio
 migas.observatorio                                       = Observatorios
+migas.plantillas.observatorio                            = Plantillas
 migas.rangoIp                                            = Rango IP
 migas.rastreo                                            = Rastreos
 migas.rastreo.editar.semilla                             = Editar Semilla
@@ -1433,6 +1442,9 @@ nueva.etiqueta.observatorio.distribucion   = Distribucion
 nueva.etiqueta.observatorio.nombre         = Nombre de la etiqueta
 nueva.etiqueta.observatorio.recurrencia    = Recurrencia
 nueva.etiqueta.observatorio.tematica       = Tematica
+nueva.plantilla.observatorio               = Nueva plantilla
+nueva.plantilla.observatorio.fichero       = Fichero ODT
+nueva.plantilla.observatorio.nombre        = Nombre de la plantilla
 nueva.semilla.google                       = Nueva semilla
 nueva.semilla.google.info                  = (Se extraer\u00E1n 10 resultados por cada p\u00E1gina)
 nueva.semilla.google.nombreSemilla         = Nombre de la Semilla:
