Not apply on compliance graphics
Former-commit-id: b810726b327a4b77b3afef6ef373c24d293354b0

--- a/portal/src/main/resources/ApplicationResources-UNEEN2019.properties
+++ b/portal/src/main/resources/ApplicationResources-UNEEN2019.properties
@@ -2422,6 +2422,7 @@ observatory.graphic.compilance.by.verification.level.1.title                 = C
 observatory.graphic.compilance.by.verification.level.2.category.title        = Comparaci\u00F3n de Cumplimiento por Verificaci\u00F3n: {0}. AA
 observatory.graphic.compilance.by.verification.level.2.name                  = ComparacionCumplimientoVerificacionII
 observatory.graphic.compilance.by.verification.level.2.title                 = Comparaci\u00F3n de Cumplimiento por Verificaci\u00F3n. AA
+observatory.graphic.compilance.gray                                          = No aplica
 observatory.graphic.compilance.green                                         = Conforme
 observatory.graphic.compilance.level.allocation.name                         = DistribucionNivelCumplimientoGlobal
 observatory.graphic.compilance.red                                           = No conforme
