Basic service complexity config
Conditional sections on agregate report


Former-commit-id: a2b81323b79d00bf384e3803cadff01c327a74dc

--- a/portal/src/main/resources/ApplicationResources-UNEEN2019.properties
+++ b/portal/src/main/resources/ApplicationResources-UNEEN2019.properties
@@ -2675,6 +2675,10 @@ rastreo.realizado.busqueda.fecha.fin    = Fecha Fin
 rastreo.realizado.busqueda.fecha.inicio = Fecha Inicio
 rastreo.realizado.busqueda.semilla      = Semilla 
 
+report.config.title         = T\u00EDtulo del informe
+report.config.title.default = Informe de observatorio de accesibilidad web
+report.config.title.label   = T\u00EDtulo del documento generado
+
 resultado.observatorio.activo.alt                                = Activo
 resultado.observatorio.detalle.semilla.rastreo.title             = Detalle de Semilla
 resultado.observatorio.eliminar.ejecucion.rastreo                = Eliminar Ejecuci\u00F3n Semilla
