--- a/portal/src/main/resources/ApplicationResources.properties
+++ b/portal/src/main/resources/ApplicationResources.properties
@@ -2625,6 +2625,9 @@ report.config.plantillas.filter.segmentos          = Plantilla de la secci\u00F3
 report.config.plantillas.filter.segmentos.info     = Para que esta plantilla funcione, la plantilla base seleccionada tiene que tener <strong>obligatoriamente un marcador llamado <em>categorysection</em></strong> en la posici\u00F3n del doumento donnde se quiera a\u00F1adir esta secci\u00F3n. En caso contrario <u>no podr\u00E1 ser insertado en el documento base</u>. <br/><a  title="Insertar un marcador en LibreOffice" href="https://help.libreoffice.org/Writer/Insert_Bookmark/es" target="_blank">Insertar un marcador en LibreOffice</span></a>
 report.config.plantillas.filter.title              = Plantillas a usar para generar el informe
 report.config.title                                = Configurar informe agregado
+report.config.title.default                        = Informe de observatorio de accesibilidad web
+report.config.title.label                          = T\u00EDtulo del documento generado
+report.config.title.title                          = T\u00EDtulo del informe
 
 resultado.observatorio.activo.alt                                = Activo
 resultado.observatorio.detalle.semilla.rastreo.title             = Detalle de Semilla
