--- a/portal/src/main/resources/ApplicationResources-UNEEN2019.properties
+++ b/portal/src/main/resources/ApplicationResources-UNEEN2019.properties
@@ -340,6 +340,8 @@ chart.problems.bs                            = Problemas
 chart.warnings                               = Advertencias
 chart.warnings.bs                            = Advertencias
 
+check.491.regex.pattern = \\bprocedimiento de aplicaci\u00F3n\\b,\\bprocediment d'aplicaci\u00F3\\b,\\baplikazioa\\b,\\bprocedemento de aplicaci\u00F3n\\b,\\benforcement procedure\\b,\\bproc\u00E9dure permettant d'assurer le respect des dispositions\\b\n
+
 client.accounts.info = Estos son las cuentas clientes a las que est\u00E1 suscrito:
 
 conectividad.form.title            = Comprobaci\u00F3n de URL
@@ -1225,6 +1227,11 @@ minhap.observatory.5_0.subgroup.2.3  = 2.3 Maquetaci\u00F3n adaptable
 minhap.observatory.5_0.subgroup.2.4  = 2.4 M\u00FAltiples v\u00EDas de navegaci\u00F3n
 minhap.observatory.5_0.subgroup.2.5  = 2.5 Independencia del dispositivo
 minhap.observatory.5_0.subgroup.2.6  = 2.6 Navegaci\u00F3n consistente
+minhap.observatory.5_0.subgroup.3.1  = 1 Presencia de la declaraci\u00F3n de accesibilidad
+minhap.observatory.5_0.subgroup.3.2  = 2 Situaci\u00F3n de cumplimiento y contenido no accesible
+minhap.observatory.5_0.subgroup.3.3  = 3 Comunicaciones sobre requisitos de accesibilidad
+minhap.observatory.5_0.subgroup.3.4  = 4 Preparaci\u00F3n de la declaraci\u00F3n de accesibilidad
+minhap.observatory.5_0.subgroup.3.5  = 5 Procedimiento de aplicaci\u00F3n
 
 ministerio.logo.alt = MINHAFP - Ministerio de Pol\u00EDtica Territorial y Funci\u00F3n P\u00FAblica
 
@@ -2637,7 +2644,7 @@ pdf.accessibility.warning                               = Advertencia
 pdf.accessibility.warnings                              = Advertencias
 pdf.error.no.results                                    = No se ha podido generar el informe PDF. El rastreo no tiene resultados asociados.
 pdf.intav.specific.problems.number                      = 20
-pdf.resultpage.media                                    = Puntuaci\u00F3n Media\nPrioridad {0}
+pdf.resultpage.media                                    = Puntuaci\u00F3n Media\n nivel de adecuaci\u00F3n {0}
 
 priority1.bs = Incidencias.Nivel de adecuaci\u00F3n A
 
