--- a/portal/profiles/desarrollo/check.descriptions.properties
+++ b/portal/profiles/desarrollo/check.descriptions.properties
@@ -359,7 +359,7 @@ check.487.error     = No se proporciona una forma de contacto para las comunicac
 check.487.rationale = No se proporciona una forma de contacto para las comunicaciones sobre requisitos de accesibilidad mediante un canal complementario al electr\u00F3nico (tel\u00E9fono u oficina f\u00EDsica de atenci\u00F3n)
 check.488.error     = No existe la secci\u00F3n \u201CPreparaci\u00F3n de la presente declaraci\u00F3n de accesibilidad\u201D.\n
 check.488.rationale = No existe la secci\u00F3n \u201CPreparaci\u00F3n de la presente declaraci\u00F3n de accesibilidad\u201D.\n
-check.489.error     = No se especifica en la declaraci\u00F3n de accesibilidad se indica la fecha de su preparaci\u00F3n.
+check.489.error     = No se especifica en la declaraci\u00F3n de accesibilidad la fecha de su preparaci\u00F3n.
 check.489.rationale = No se especifica en la declaraci\u00F3n de accesibilidad se indica la fecha de su preparaci\u00F3n.
 # [MODIFICADA] 
 check.49.error      = El c\u00F3digo de idioma usado para identificar el idioma principal no es un c\u00F3digo correcto.
@@ -368,6 +368,8 @@ check.490.error     = La fecha de la \u00FAltima revisi\u00F3n es mayor de una a
 check.490.rationale = Si la fecha de preparaci\u00F3n tiene m\u00E1s de un a\u00F1o de antig\u00FCedad, se verifica que en la declaraci\u00F3n de accesibilidad se indica tambi\u00E9n la fecha de la \u00FAltima revisi\u00F3n y \u00E9sta tiene menos de un a\u00F1o de antig\u00FCedad respecto a la fecha actual.
 check.491.error     = No existe la secci\u00F3n \u201CProcedimiento de aplicaci\u00F3n\u201D en la declaraci\u00F3n de accesibilidad 
 check.491.rationale = No existe la secci\u00F3n \u201CProcedimiento de aplicaci\u00F3n\u201D en la declaraci\u00F3n de accesibilidad 
+check.492.error     = Tablas mayoritariamente vac\u00EDas
+check.492.rationale = M\u00E1s del 70% de los elementos <code>td</code> de la tabla est\u00E1n vac\u00EDos lo que supone un problema de lectura y comprensi\u00F3n para los usuarios lectores de pantalla.
 #2.1.4 T\u00edtulos de p\u00e1gina y marcos descriptivos
 # [MODIFICADA] Existencia de title 
 check.50.error      = Ausencia de un t\u00EDtulo de p\u00E1gina (elemento <code>TITLE</code>)
