--- a/portal/src/main/resources/ApplicationResources.properties
+++ b/portal/src/main/resources/ApplicationResources.properties
@@ -2854,6 +2854,7 @@ servicio.diagnostico.fecha.inicio                   = Fecha inicio (incluida)
 servicio.diagnostico.fecha.legend                   = Rango de fechas de exportaci\u00F3n
 servicio.diagnostico.title                          = Servicio de Diagn\u00F3stico
 servicio.diagnostirco.estadisticas.amplitud         = Amplitud
+servicio.diagnostirco.estadisticas.avg              = Tiempo medio de los an\u00E1lisis
 servicio.diagnostirco.estadisticas.directorio       = En directorio
 servicio.diagnostirco.estadisticas.email            = Email
 servicio.diagnostirco.estadisticas.encurso.info     = Se muestran los an\u00E1lisis en estado "Lanzado" del d\u00EDa actual
