Seeds filter has all fields except tags. TODO: filter by tag and fix export methods to fit the filter
Former-commit-id: e82192e344cde2b1adb4fc5c7dee064187594ad3

--- a/portal/src/main/resources/ApplicationResources-2012-b.properties
+++ b/portal/src/main/resources/ApplicationResources-2012-b.properties
@@ -1401,9 +1401,12 @@ nueva.semilla.ip.puertos                 = Puertos:
 nueva.semilla.ip.title                   = Rango de IP
 nueva.semilla.observatorio.acronimo      = Acr\u00F3nimo
 nueva.semilla.observatorio.activa        = Activa
+nueva.semilla.observatorio.eliminada        = Eliminada
 nueva.semilla.observatorio.categoria     = Segmento
+nueva.semilla.observatorio.directorio = Directorio
 nueva.semilla.observatorio.complejidad   = Complejidad
 nueva.semilla.observatorio.dependencia   = Depende de
+nueva.semilla.observatorio.ambito   = Ambito
 nueva.semilla.observatorio.etiqueta		 = Etiqueta
 nueva.semilla.observatorio.in.directory  = Seguir solo enlaces del directorio:
 nueva.semilla.observatorio.nombre        = Nombre Semilla
