--- a/portal/pom.xml
+++ b/portal/pom.xml
@@ -1,15 +1,10 @@
-<!-- Copyright (C) 2017 MINHAFP, Ministerio de Hacienda y Función Pública, 
-	This program is licensed and may be used, modified and redistributed under 
-	the terms of the European Public License (EUPL), either version 1.2 or (at 
-	your option) any later version as soon as they are approved by the European 
-	Commission. Unless required by applicable law or agreed to in writing, software 
-	distributed under the License is distributed on an "AS IS" BASIS, WITHOUT 
-	WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the 
-	License for the specific language governing permissions and more details. 
-	You should have received a copy of the EUPL1.2 license along with this program; 
-	if not, you may find it at http://eur-lex.europa.eu/legal-content/EN/TXT/?uri=CELEX:32017D0863 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<!-- Copyright (C) 2017 MINHAFP, Ministerio de Hacienda y Función Pública, This program is licensed and may be used, modified 
+	and redistributed under the terms of the European Public License (EUPL), either version 1.2 or (at your option) any later 
+	version as soon as they are approved by the European Commission. Unless required by applicable law or agreed to in writing, 
+	software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, 
+	either express or implied. See the License for the specific language governing permissions and more details. You should have 
+	received a copy of the EUPL1.2 license along with this program; if not, you may find it at http://eur-lex.europa.eu/legal-content/EN/TXT/?uri=CELEX:32017D0863 -->
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
@@ -53,9 +48,8 @@
 					<include>tiles-defs.xml</include>
 				</includes>
 				<filtering>true</filtering>
-				<!-- Como intentamos copiar el fichero a una ruta padre del directorio 
-					classes (raiz de resources) hay que usar ruta absoluta (usando la variable 
-					${basedir}) -->
+				<!-- Como intentamos copiar el fichero a una ruta padre del directorio classes (raiz de resources) hay que usar ruta 
+					absoluta (usando la variable ${basedir}) -->
 				<targetPath>${basedir}/target/oaw/WEB-INF</targetPath>
 			</resource>
 			<resource>
@@ -70,15 +64,13 @@
 				<includes>
 					<include>context.xml</include>
 				</includes>
-				<!-- Como intentamos copiar el fichero a una ruta padre del directorio 
-					classes (raiz de resources) hay que usar ruta absoluta (usando la variable 
-					${basedir}) -->
+				<!-- Como intentamos copiar el fichero a una ruta padre del directorio classes (raiz de resources) hay que usar ruta 
+					absoluta (usando la variable ${basedir}) -->
 				<targetPath>${basedir}/target/oaw/META-INF</targetPath>
 			</resource>
 		</resources>
-		<!-- <plugins> <plugin> <artifactId>maven-war-plugin</artifactId> <configuration> 
-			<packagingExcludes>META-INF/context.xml</packagingExcludes> </configuration> 
-			</plugin> </plugins> -->
+		<!-- <plugins> <plugin> <artifactId>maven-war-plugin</artifactId> <configuration> <packagingExcludes>META-INF/context.xml</packagingExcludes> 
+			</configuration> </plugin> </plugins> -->
 
 	</build>
 
@@ -162,8 +154,7 @@
 		</dependency>
 
 		<!-- STRUTS -->
-		<!-- Es obligatorio añadir la dependencia a la versión 1.2.8 porque usa 
-			API que está eliminada en versiones posteriores -->
+		<!-- Es obligatorio añadir la dependencia a la versión 1.2.8 porque usa API que está eliminada en versiones posteriores -->
 		<dependency>
 			<groupId>struts</groupId>
 			<artifactId>struts</artifactId>
@@ -217,6 +208,20 @@
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.10</version>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core -->
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-core</artifactId>
+			<version>2.10.1</version>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-annotations -->
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-annotations</artifactId>
+			<version>2.10.1</version>
 		</dependency>
 
 
