--- a/portal/pom.xml
+++ b/portal/pom.xml
@@ -224,6 +224,12 @@
 			<version>2.10.1</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.10.1</version>
+		</dependency>
+
 
 	</dependencies>
 
