Multiple basic service report fixes
Former-commit-id: a64d0d3e9603afea55054d8de8b2b7b2e455e227

--- a/portal/src/main/resources/ApplicationResources-UNEEN2019.properties
+++ b/portal/src/main/resources/ApplicationResources-UNEEN2019.properties
@@ -2506,8 +2506,8 @@ pass.distintos  = El password y su confirmaci\u00F3n son distintos.
 
 pdf.accessibility.anexo1                                = Anexo I Metodolog\u00EDa del observatorio
 pdf.accessibility.anexo1.p1                             = Se puede consultar la metodolog\u00EDa del observatorio en [anchor1]
-pdf.accessibility.anexo1.p1.anchor.text                 = http://administracionelectronica.gob.es/PAe/accesibilidad/metodologiaUNE-EN2019v2
-pdf.accessibility.anexo1.p1.anchor.url                  = http://administracionelectronica.gob.es/PAe/accesibilidad/metodologiaUNE-EN2019v2
+pdf.accessibility.anexo1.p1.anchor.text                 = http://administracionelectronica.gob.es/PAe/accesibilidad/metodologiaSimplificado
+pdf.accessibility.anexo1.p1.anchor.url                  = http://administracionelectronica.gob.es/PAe/accesibilidad/metodologiaSimplificado
 pdf.accessibility.bs.code                               = C\u00F3digo
 pdf.accessibility.bs.date                               = Fecha: 
 pdf.accessibility.bs.domain                             = Dominio: 
@@ -2558,7 +2558,7 @@ pdf.accessibility.global.summary.info                   = Los niveles de adecuac
 pdf.accessibility.global.summary.p1                     = En este apartado se muestran los resultados globales del sitio web calculados de acuerdo a la metodolog\u00EDa actual del Observatorio de Accesibilidad Web, as\u00ED como una comparaci\u00F3n con la iteraci\u00F3n anterior, en el caso de existir. Los resultados calculados son los siguientes:
 pdf.accessibility.global.summary.p2                     = La {0} refleja la cantidad de verificaciones de accesibilidad que se satisfacen correctamente ya sean de nivel de adecuaci\u00F3n A o AA. Por lo tanto, cuanta m\u00E1s alta sea la puntuaci\u00F3n m\u00E1s verificaciones de accesibilidad se est\u00E1n cumpliendo.
 pdf.accessibility.global.summary.p2.bold                = puntuaci\u00F3n media del sitio web
-pdf.accessibility.global.summary.p3                     = El {0} del sitio web (No v\u00E1lido, A o AA) est\u00E1 relacionado con el nivel de adecuaci\u00F3n de las verificaciones que se satisfacen. Si los fallos se concentran en verificaciones de nivel de adecuaci\u00F3n A, el nivel de adecuaci\u00F3n estimado ser\u00E1 No v\u00E1lido aunque la puntuaci\u00F3n media del sitio web sea alta. 
+pdf.accessibility.global.summary.p3                     = El {0} del sitio web (No v\u00E1lido, A o AA) est\u00E1 relacionado con el nivel de adecuaci\u00F3n de las verificaciones que se satisfacen. Si los fallos se concentran en verificaciones de nivel de adecuaci\u00F3n A, el nivel de adecuaci\u00F3n estimado ser\u00E1 'No v\u00E1lido' aunque la puntuaci\u00F3n media del sitio web sea alta. 
 pdf.accessibility.global.summary.p3.bold                = nivel de adecuaci\u00F3n estimado
 pdf.accessibility.global.summary.p4                     = La {0} del sitio web (No conforme, Parcialmente conforme o Totalmente conforme) est\u00E1 relacionada con la conformidad (No aplica, Conforme o No conforme) de cada una de las verificaciones a nivel de sitio web.
 pdf.accessibility.global.summary.p4.bold                = situaci\u00F3n de cumplimiento estimada
@@ -2642,7 +2642,7 @@ pdf.accessibility.seed.detail.tabla.tematica            = Tem\u00E1tica
 pdf.accessibility.seed.detail.tabla.titulo              = Detalles del sitio web
 pdf.accessibility.seed.detail.title                     = Detalles del sitio web analizado
 pdf.accessibility.subtitle                              = SEGUIMIENTO SIMPLIFICADO\nUNE-EN 301549:2019
-pdf.accessibility.title                                 = INFORME DE\nACCESIBILIDAD WEB
+pdf.accessibility.title                                 = INFORME DE\nACCESIBILIDAD WEB\nSEGUIMIENTO SIMPLIFICADO
 pdf.accessibility.warning                               = Advertencia
 pdf.accessibility.warnings                              = Advertencias
 pdf.error.no.results                                    = No se ha podido generar el informe PDF. El rastreo no tiene resultados asociados.
@@ -2856,7 +2856,7 @@ resultados.primarios.43.p1                                       = Se muestra a 
 resultados.primarios.43.p1.anchor                                = PMP
 resultados.primarios.43.p2                                       = En el eje X de la gr\u00E1fica se muestran las p\u00E1ginas analizadas en el portal, mientras que el Eje Y representa la puntuaci\u00F3n obtenida por cada una de ellas. Adem\u00E1s, la barra de puntuaci\u00F3n de cada p\u00E1gina indica mediante el c\u00F3digo de color Rojo - Amarillo - Verde, el grado de adecuaci\u00F3n obtenido (No V\u00E1lido, A, AA).
 resultados.primarios.5.p1                                        = A continuaci\u00F3n se presenta el resultado de la aplicaci\u00F3n de las verificaciones que componen la metodolog\u00EDa del Observatorio sobre cada p\u00E1gina de la muestra. En las siguientes tablas se muestra para cada una de dichas comprobaciones, el resultado de Valor y Modalidad obtenido por cada p\u00E1gina analizada. 
-resultados.primarios.5.p2                                        = Por lo tanto de forma r\u00E1pida y visual se puede ver en qu\u00E9 p\u00E1ginas hay que concentrar esfuerzos para mejorar los resultados del observatorio (aquellas con modalidad Falla o puntuaci\u00F3n cero). Una p\u00E1gina tendr\u00E1 Valor "0" y Modalidad "Pasa" cuando tenga alg\u00FAn problema menor de accesibilidad. Esto quiere decir que hay alg\u00FAn aspecto que corregir pero no es tan grave como para asignarle modalidad "Falla". Para mejorar la accesibilidad los primeros esfuerzos se deben dedicar a solucionar los problemas que originan modalidad "Falla".
+resultados.primarios.5.p2                                        = Por lo tanto de forma r\u00E1pida y visual se puede ver en qu\u00E9 p\u00E1ginas hay que concentrar esfuerzos para mejorar los resultados del observatorio (aquellas con modalidad Falla o puntuaci\u00F3n cero). Una p\u00E1gina tendr\u00E1 Valor "0" y Modalidad "Pasa" cuando tenga alg\u00FAn problema menor de accesibilidad. Esto quiere decir que hay alg\u00FAn aspecto que corregir pero no es tan grave como para asignarle modalidad "Falla". Para mejorar la accesibilidad los primeros esfuerzos se deben dedicar a solucionar los problemas que origina la modalidad "Falla".
 resultados.primarios.errores.mas.info                            = Para obtener la informaci\u00F3n detallada de los errores detectados y su localizaci\u00F3n exacta en el c\u00F3digo debe utilizar el "Servicio de Diagn\u00F3stico en l\u00EDnea" que se encuentra disponible desde la "Comunidad Accesibilidad"\n([anchor1])
 resultados.primarios.num.paginas                                 = N\u00FAmero de p\u00E1ginas 
 resultados.primarios.pagina                                      = La PMP refleja la cantidad de requisitos de accesibilidad que se satisfacen correctamente. El nivel de adecuaci\u00F3n tiene en consideraci\u00F3n las prioridades de los requisitos, por lo que fallos en requisitos de Aoriginan p\u00E1ginas con nivel de adecuaci\u00F3n No V\u00E1lido. Siempre se deber\u00E1n solucionar primero los problemas relacionados con verificaciones de Aque hayan ocasionado una modalidad "Falla".
