Fix basic service report texts
Former-commit-id: 7f4a4f2fb99659b383efdcad1b977dd5d57dc716

--- a/portal/src/main/resources/ApplicationResources-UNEEN2019.properties
+++ b/portal/src/main/resources/ApplicationResources-UNEEN2019.properties
@@ -2586,11 +2586,11 @@ pdf.accessibility.intro.how.p8.anchor1.text             = comunidad de accesibil
 pdf.accessibility.intro.how.p8.anchor1.url              = http://administracionelectronica.gob.es/comunidades/accesibilidad
 pdf.accessibility.intro.how.title                       = C\u00F3mo utilizar el informe 
 pdf.accessibility.intro.info                            = Este documento NO constituye el \u201CInforme de revisi\u00F3n de la accesibilidad\u201D que se deber\u00E1 realizar siguiendo los requisitos del art\u00EDculo 17 del RD 1112/2018 para las revisiones de accesibilidad.
-pdf.accessibility.intro.next.list.1                     = {0} indicados en este informe, en el apartado "Incidencias" de cada p\u00E1gina. {1}
+pdf.accessibility.intro.next.list.1                     = [anchor1].
 pdf.accessibility.intro.next.list.1.anchor1.text        = comunidad de accesibilidad
 pdf.accessibility.intro.next.list.1.anchor1.url         = http://administracionelectronica.gob.es/comunidades/accesibilidad
 pdf.accessibility.intro.next.list.1.bold1               = Corregir los errores de accesibilidad 
-pdf.accessibility.intro.next.list.1.bold2               = En caso, de tener dudas con respecto a la informaci\u00F3n suministrada en el informe se puede utilizar para resolverlas el foro disponible en la pesta\u00F1a \u201CColaboraci\u00F3n\u201D disponible en la
+pdf.accessibility.intro.next.list.1.bold2               = En caso, de tener dudas con respecto a la informaci\u00F3n suministrada en el informe se puede utilizar para resolverlas el foro disponible en la pesta\u00F1a \u201CColaboraci\u00F3n\u201D disponible en la 
 pdf.accessibility.intro.next.list.2                     = del Observatorio para verificar la consolidaci\u00F3n de los cambios realizados en la fase anterior. 
 pdf.accessibility.intro.next.list.2.bold                = Volver a solicitar un informe al servicio de diagn\u00F3stico en l\u00EDnea 
 pdf.accessibility.intro.next.list.3                     = Hasta aqu\u00ED, se estar\u00EDa cumpliendo con la mejora de la accesibilidad en el marco del {0} establecido en la [anchor1] {1}
