--- a/portal/src/main/resources/ApplicationResources-Accesibilidad.properties
+++ b/portal/src/main/resources/ApplicationResources-Accesibilidad.properties
@@ -2348,8 +2348,8 @@ ob.resAnon.intav.report.chapterEv6.title                                     = V
 ob.resAnon.intav.report.chapterEv7.title                                     = Verificaci\u00F3n 1.1.3 : Identificaci\u00F3n y alternativas para marcos
 ob.resAnon.intav.report.chapterEv8.title                                     = Verificaci\u00F3n 1.1.4 : Enlaces descriptivos
 ob.resAnon.intav.report.chapterEv9.title                                     = Verificaci\u00F3n 1.2.1: C\u00F3digo V\u00E1lido (HTML y CSS)
-#ob.resAnon.intav.report.foot                                                 = Informe simplificado OAW : {0} ({1})
-ob.resAnon.intav.report.foot                                                 = Informe simplificado OAW 
+ob.resAnon.intav.report.foot                                                 = Informe simplificado OAW : {0} ({1})
+#ob.resAnon.intav.report.foot                                                 = Informe simplificado OAW 
 ob.resAnon.intav.report.index.title                                          = \u00CDNDICE 
 ob.resAnon.intav.report.subtitle                                             = Centro de Referencia en Accesibilidad y Est\u00E1ndares Web
 ob.resAnon.intav.report.summary.1.title                                      = Resultados Globales
